WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278648
REGRESSION(
281966@main
): [GTK] Crash when drag-dropping files to gitlab issues
https://bugs.webkit.org/show_bug.cgi?id=278648
Summary
REGRESSION(281966@main): [GTK] Crash when drag-dropping files to gitlab issues
darkblaze69
Reported
2024-08-26 06:21:20 PDT
Created
attachment 472292
[details]
gdb.log * Epiphany 47.beta-40-g98823e788 * webkitgtk 2.45.91 * GNOME 47.beta * Arch Linux Crash when drag-dropping files to gitlab issues. In 2.45.90 it didn't work either but at least it didn't crash. #0 WTF::RefPtr<WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl>, WTF::DefaultRefDerefTraits<WTF::DefaultWeakPtrImpl> >::operator bool () at /usr/src/debug/webkitgtk-6.0/build/WTF/Headers/wtf/RefPtr.h:77 #1 WTF::WeakPtrFactory<IPC::MessageReceiver, WTF::DefaultWeakPtrImpl>::initializeIfNeeded () at /usr/src/debug/webkitgtk-6.0/build/WTF/Headers/wtf/WeakPtrFactory.h:72 #2 WTF::WeakPtr<WebKit::WebPageProxy, WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl> >::implForObject<WebKit::WebPageProxy> () at /usr/src/debug/webkitgtk-6.0/build/WTF/Headers/wtf/WeakPtr.h:162 #3 WTF::WeakPtr<WebKit::WebPageProxy, WTF::DefaultWeakPtrImpl, WTF::RawPtrTraits<WTF::DefaultWeakPtrImpl> >::WeakPtr<void> () at /usr/src/debug/webkitgtk-6.0/build/WTF/Headers/wtf/WeakPtr.h:63 #4 WebKit::WebProcessProxy::assumeReadAccessToBaseURL () at /usr/src/debug/webkitgtk-6.0/webkitgtk-2.45.91/Source/WebKit/UIProcess/WebProcessProxy.cpp:958 #5 0x00007f467ee27a5a in operator() () at /usr/src/debug/webkitgtk-6.0/webkitgtk-2.45.91/Source/WebKit/UIProcess/WebPageProxy.cpp:3513 #6 0x00007f467ee373a8 in WebKit::WebPageProxy::performDragControllerAction () at /usr/src/debug/webkitgtk-6.0/webkitgtk-2.45.91/Source/WebKit/UIProcess/WebPageProxy.cpp:3534 #7 0x00007f467ee5fc29 in WebKit::WebPageProxy::dragEntered () at /usr/src/debug/webkitgtk-6.0/webkitgtk-2.45.91/Source/WebKit/UIProcess/WebPageProxy.cpp:3457 #8 0x00007f467ef37796 in WebKit::DropTarget::enter () at /usr/src/debug/webkitgtk-6.0/webkitgtk-2.45.91/Source/WebKit/UIProcess/API/gtk/DropTargetGtk4.cpp:342 #9 0x00007f467ef3ad10 in WebKit::DropTarget::didLoadData () at /usr/src/debug/webkitgtk-6.0/webkitgtk-2.45.91/Source/WebKit/UIProcess/API/gtk/DropTargetGtk4.cpp:310 #10 operator() () at /usr/src/debug/webkitgtk-6.0/webkitgtk-2.45.91/Source/WebKit/UIProcess/API/gtk/DropTargetGtk4.cpp:172 #11 call () at /usr/src/debug/webkitgtk-6.0/build/WTF/Headers/wtf/Function.h:53 #12 WTF::Function<void(WTF::Vector<WTF::String, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&)>::operator() () at /usr/src/debug/webkitgtk-6.0/build/WTF/Headers/wtf/Function.h:82 #13 WTF::CompletionHandler<void(WTF::Vector<WTF::String, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&&)>::operator() () at /usr/src/debug/webkitgtk-6.0/build/WTF/Headers/wtf/CompletionHandler.h:78 #14 operator() () at /usr/src/debug/webkitgtk-6.0/webkitgtk-2.45.91/Source/WebKit/UIProcess/API/gtk/DropTargetGtk4.cpp:304 #15 _FUN () at /usr/src/debug/webkitgtk-6.0/webkitgtk-2.45.91/Source/WebKit/UIProcess/API/gtk/DropTargetGtk4.cpp:305 #16 0x00007f4684a9934c in g_task_return_now (task=0x562709829270) at ../glib/gio/gtask.c:1361 #17 0x00007f4684a9d625 in g_task_return (type=<optimized out>, task=0x562709829270) at ../glib/gio/gtask.c:1430 #18 g_task_return (task=0x562709829270, type=<optimized out>) at ../glib/gio/gtask.c:1387 #19 0x00007f4684591e99 in gdk_drop_read_value_done (source=<optimized out>, result=0x56270cd6b520, data=0x562709829270) at ../gtk/gdk/gdkdrop.c:734 #20 0x00007f468457672c in gdk_content_deserializer_emit_callback (data=0x73752f656d6f682f) at ../gtk/gdk/gdkcontentdeserializer.c:341 #21 0x00007f468489c459 in g_main_dispatch (context=0x56270842dca0) at ../glib/glib/gmain.c:3357 #22 0x00007f46848ff0f7 in g_main_context_dispatch_unlocked (context=0x56270842dca0) at ../glib/glib/gmain.c:4208 #23 g_main_context_iterate_unlocked.isra.0 (context=context@entry=0x56270842dca0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/glib/gmain.c:4273 #24 0x00007f468489b955 in g_main_context_iteration (context=context@entry=0x56270842dca0, may_block=may_block@entry=1) at ../glib/glib/gmain.c:4338 #25 0x00007f4684aceb36 in g_application_run (application=0x5627084465f0, argc=<optimized out>, argv=0x7fff74934998) at ../glib/gio/gapplication.c:2715 #26 0x00005626db8a4896 in main (argc=<optimized out>, argv=<optimized out>) at ../epiphany/src/ephy-main.c:445
Attachments
gdb.log
(113.33 KB, text/x-log)
2024-08-26 06:21 PDT
,
darkblaze69
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2024-08-27 05:21:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32758
EWS
Comment 2
2024-08-28 01:09:22 PDT
Committed
282833@main
(833f10581362): <
https://commits.webkit.org/282833@main
> Reviewed commits have been landed. Closing PR #32758 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug