REGRESSION(281966@main): [GTK] Crash when drag-dropping files to gitlab issues https://bugs.webkit.org/show_bug.cgi?id=278648

Reviewed by Adrian Perez de Castro.

There are two problems here:

  - We take a weak pointer to the page proxy that is not checked. I'm
    not sure this is a problem in the end, because the completion
    handler is protecting this. But since the weak pointer is used, I
    think it's better to check it, just in case the completion handler
    changes in the future.

  - The weak pointer is used after being moved.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::performDragControllerAction):

Canonical link: https://commits.webkit.org/282833@main